fix: table border collapse, github link

--- a/noteblog/Shared/Note.css
+++ b/noteblog/Shared/Note.css
@@ -129,4 +129,5 @@ figure {
 
 figure table {
   width: 100%;
+  border-collapse: collapse;
 }
